--- a/index.html
+++ b/index.html
@@ -79,15 +79,25 @@
             <!-- View / account -->
             <div class="view" id="tab-content-1">
                 <div class="grid grid--account">
-                    <div class="grid__item grid__item--account-name">
+                    <section class="grid__section">
                         <h3 class="text text--subtitle text--margin">Propriétaire du compte</h3>
                         <p class="text text--name">Hubert Bonisseur de La Bath</p>
-                    </div>
-                    <div class="grid__item grid__item--account-swift">
+                    </section>
+                    <section class="grid__section grid__section--row-span-4">
+                        <div class="column">
+                            <div class="column__section column__section--fixed">
+                                <h3 class="text text--subtitle">Historique des opérations</h3>
+                            </div>
+                            <div class="column__section column__section--fluid">
+                                <div class="paper"></div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="grid__section">
                         <h3 class="text text--subtitle text--margin">Code SWIFT</h3>
                         <p class="text text--number">0123456789</p>
-                    </div>
-                    <div class="grid__item grid__item--account-swift-list">
+                    </section>
+                    <section class="grid__section">
                         <div class="column">
                             <div class="column__section column__section--fixed">
                                 <h3 class="text text--subtitle">Codes SWIFT enregistrés</h3>
@@ -96,66 +106,44 @@
                                 <div class="paper"></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="grid__item grid__item--account-swift-add">
+                    </section>
+                    <section class="grid__section">
                         <h3 class="text text--subtitle text--margin">Ajouter un code SWIFT</h3>
-                        <div class="row">
-                            <div class="row__section row__section--fluid">
+                        <div class="grid grid--auto-height">
+                            <div class="grid__section grid__section--fluid">
                                 <input class="input" type="text" placeholder="Entrer le code SWIFT">
                             </div>
-                            <div class="row__section row__section--fluid">
+                            <div class="grid__section grid__section--fluid">
                                 <button class="button">
                                     <span class="button__label">Ajouter</span>
                                 </button>
                             </div>
                         </div>
-                    </div>
-                    <div class="grid__item grid__item--account-history">
-                        <div class="column">
-                            <div class="column__section column__section--fixed">
-                                <h3 class="text text--subtitle">Historique des opérations</h3>
-                            </div>
-                            <div class="column__section column__section--fluid">
-                                <div class="paper"></div>
-                            </div>
-                        </div>
-                    </div>
+                    </section>
                 </div>
             </div>
 
             <!-- View / operation -->
             <div class="view" id="tab-content-2">
                 <div class="grid grid--operation">
-                    <div class="grid__item grid__item--operation-deposit-title">
+                    <div class="grid__section">
                         <h2 class="text text--title">Effectuer un dépot</h2>
-                    </div>
-                    <div class="grid__item grid__item--operation-deposit-form">
                         <h3 class="text text--subtitle text--margin">Montant du dépot</h3>
                         <input class="input" type="text" placeholder="Entrer le montant du dépot">
+                        <div class="grid grid--auto-height">
+                            <div class="grid__section">
+                                <button class="button">
+                                    <span class="button__label">Déposer</span>
+                                </button>
+                            </div>
+                            <div class="grid__section">
+                                <button class="button">
+                                    <span class="button__label">Tout déposer</span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="grid__item grid__item--operation-deposit-button">
-                        <button class="button">
-                            <span class="button__label">Déposer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--operation-all-button">
-                        <button class="button">
-                            <span class="button__label">Tout déposer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--operation-withdraw-title">
-                        <h2 class="text text--title">Effectuer un retrait</h2>
-                    </div>
-                    <div class="grid__item grid__item--operation-withdraw-form">
-                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
-                    </div>
-                    <div class="grid__item grid__item--operation-withdraw-button">
-                        <button class="button">
-                            <span class="button__label">Retirer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--operation-history">
+                    <div class="grid__section grid__section--row-span-2">
                         <div class="column">
                             <div class="column__section column__section--fixed">
                                 <h3 class="text text--subtitle">Historique des opérations</h3>
@@ -164,6 +152,14 @@
                                 <div class="paper"></div>
                             </div>
                         </div>
+                    </div>
+                    <div class="grid__section">
+                        <h2 class="text text--title">Effectuer un retrait</h2>
+                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
+                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
+                        <button class="button">
+                            <span class="button__label">Retirer</span>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -171,27 +167,25 @@
             <!-- View / transfer -->
             <div class="view" id="tab-content-3">
                 <div class="grid grid--transfer">
-                    <div class="grid__item grid__item--transfer-title">
+                    <div class="grid__section">
                         <h2 class="text text--title">Effectuer un transfert</h2>
-                    </div>
-                    <div class="grid__item grid__item--transfer-amount">
-                        <h3 class="text text--subtitle text--margin">Montant du transfert</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du transfert">
-                    </div>
-                    <div class="grid__item grid__item--transfer-swift">
-                        <h3 class="text text--subtitle text--margin">Code SWIFT du déstinataire</h3>
-                        <input class="input" type="text" placeholder="Entrer le code SWIFT du déstinataire">
-                    </div>
-                    <div class="grid__item grid__item--transfer-reference">
+                        <div class="grid grid--auto-height">
+                            <div class="grid__section">
+                                <h3 class="text text--subtitle text--margin">Montant du transfert</h3>
+                                <input class="input" type="text" placeholder="Entrer le montant du transfert">
+                            </div>
+                            <div class="grid__section">
+                                <h3 class="text text--subtitle text--margin">Code SWIFT du déstinataire</h3>
+                                <input class="input" type="text" placeholder="Entrer le code SWIFT du déstinataire">
+                            </div>
+                        </div>
                         <h3 class="text text--subtitle text--margin">Référence du transfert</h3>
                         <input class="input" type="text" placeholder="Entrer la référence du transfert">
-                    </div>
-                    <div class="grid__item grid__item--transfer-button">
                         <button class="button">
                             <span class="button__label">Transférer</span>
-                        </button>
+                        </button>                 
                     </div>
-                    <div class="grid__item grid__item--transfer-swift-list">
+                    <div class="grid__section">
                         <div class="column">
                             <div class="column__section column__section--fixed">
                                 <h3 class="text text--subtitle">Liste des codes SWIFT</h3>
@@ -207,48 +201,23 @@
             <!-- View / enterprise -->
             <div class="view" id="tab-content-4">
                 <div class="grid grid--enterprise">
-                    <div class="grid__item grid__item--enterprise-balance">
-                        <h3 class="text text--subtitle text--margin">Solde de l'entreprise</h3>
-                        <p class="text text--number">25,000,000$</p>
+                    <div class="grid__section">
+                        <div class="grid grid--auto-height">
+                            <div class="grid__section">
+                                <h3 class="text text--subtitle text--margin">Solde de l'entreprise</h3>
+                                <p class="text text--number">25,000,000$</p>
+                            </div>
+                            <div class="grid__section">
+                                <h3 class="text text--subtitle text--margin">Code SWIFT de l'entreprise</h3>
+                                <p class="text text--number">0123456789</p>
+                            </div>
+                            <div class="grid__section grid__section--col-span-2">
+                                <h3 class="text text--subtitle text--margin">Propriétaire de l'entreprise</h3>
+                                <p class="text text--name">Garry Green</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="grid__item grid__item--enterprise-swift">
-                        <h3 class="text text--subtitle text--margin">Code SWIFT de l'entreprise</h3>
-                        <p class="text text--number">0123456789</p>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-owner">
-                        <h3 class="text text--subtitle text--margin">Propriétaire de l'entreprise</h3>
-                        <p class="text text--name">Garry Green</p>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-deposit-title">
-                        <h2 class="text text--title">Effectuer un dépot</h2>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-deposit-form">
-                        <h3 class="text text--subtitle text--margin">Montant du dépot</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du dépot">
-                    </div>
-                    <div class="grid__item grid__item--enterprise-deposit-button">
-                        <button class="button">
-                            <span class="button__label">Déposer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-deposit-all-button">
-                        <button class="button">
-                            <span class="button__label">Tout déposer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-withdraw-title">
-                        <h2 class="text text--title">Effectuer un retrait</h2>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-withdraw-form">
-                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
-                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
-                    </div>
-                    <div class="grid__item grid__item--enterprise-withdraw-button">
-                        <button class="button">
-                            <span class="button__label">Retirer</span>
-                        </button>
-                    </div>
-                    <div class="grid__item grid__item--enterprise-history">
+                    <div class="grid__section grid__section--row-span-3">
                         <div class="column">
                             <div class="column__section column__section--fixed">
                                 <h3 class="text text--subtitle">Historique des opérations</h3>
@@ -257,6 +226,31 @@
                                 <div class="paper"></div>
                             </div>
                         </div>
+                    </div>
+                    <div class="grid__section">
+                        <h2 class="text text--title">Effectuer un dépot</h2>
+                        <h3 class="text text--subtitle text--margin">Montant du dépot</h3>
+                        <input class="input" type="text" placeholder="Entrer le montant du dépot">
+                        <div class="grid grid-auto-height">
+                            <div class="grid__section">
+                                <button class="button">
+                                    <span class="button__label">Déposer</span>
+                                </button>
+                            </div>
+                            <div class="grid__section">
+                                <button class="button">
+                                    <span class="button__label">Tout déposer</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid__section">
+                        <h2 class="text text--title">Effectuer un retrait</h2>
+                        <h3 class="text text--subtitle text--margin">Montant du retrait</h3>
+                        <input class="input" type="text" placeholder="Entrer le montant du retrait">
+                        <button class="button">
+                            <span class="button__label">Retirer</span>
+                        </button>
                     </div>
                 </div>
             </div>
